Backend: update openapi and routes
